--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -49,33 +49,112 @@ body{
     background-size: cover;
 }
 
+
+
 @media screen and (min-width: 768px) {
   
     .mobile-view{
         display:none;
     }
+    .product-one{
+        margin-top: -7rem;
+    }
+    .product-two{
+        margin-top: -7rem;
+    }
+    .product-three{
+        margin-top: -7rem;
+    }
+    .product-four{
+        margin-top: -7rem;
+    }
+    .product-five{
+        margin-top: -7rem;
+    }
+    .product-six{
+        margin-top: -7rem;
+    }
 }
 
 
-@media screen and (min-width: 1024px) {
+@media only screen and (width: 768px) and (height: 1024px) and (orientation: portrait ) {
+    
+   .box-1{
+    display: none;
+   }
+}
+
+
+
+@media only screen
+  and (max-device-width: 1024px)
+  and (max-device-width: 1366px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    /* CSS for iPad Pro in portrait orientation */
+    .box-1{
+        display: none;
+     
+    }
+    .product-one{
+        margin-top: -17.5rem;
+        
+    }
+    .product-two{
+        margin-top: -17.5rem;
+    }
+    .product-three{
+        margin-top: -17.5rem;
+    }
+    .product-four{
+        margin-top: -17.5rem;
+    }
+    .product-five{
+        margin-top: -17.5rem;
+    }
+    .product-six{
+        margin-top: -17.5rem;
+    }
+}
+
+/* @media screen and (min-width: 1024px) {
   
     .box-1{
         display:none;
     }
-}
+} */
 
 @media screen and (max-width: 912px) {
   
-    .box-2{
+    .box-4{
         display:none;
     }
 }
 
 
-@media screen and (max-width: 853px) {
+@media screen and (min-width: 853px) {
   
-    .box-2{
+    .box-1{
         display:none;
+    }
+    .product-one{
+        margin-top: 10px;
+       
+    }
+    .product-two{
+        margin-top: 10px;
+    }
+    .product-three{
+        margin-top: 10px;
+    }
+    .product-four{
+        margin-top: 10px;
+    }
+    .product-five{
+        margin-top: 10px;
+    }
+    .product-six{
+        margin-top: 10px;
     }
 }
 
@@ -86,5 +165,96 @@ body{
 
     .mobile-view{
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 540px) {
+  
+    .product-one{
+        margin-top:-3.5rem;
+    }
+    .product-two{
+        margin-top:-3.5rem;
+    }
+    .product-three{
+        margin-top:-3.5rem;
+    }
+    .product-four{
+        margin-top:-3.5rem;
+    }
+    .product-five{
+        margin-top:-3.5rem;
+    }
+    .product-six{
+        margin-top:-3.5rem;
+    }
+
+    
+}
+
+@media screen and (max-width: 430px) {
+  
+    .product-one{
+        margin-top:0px;
+    }
+    .product-two{
+        margin-top:0px;
+    }
+    .product-three{
+        margin-top:0px;
+    }
+    .product-four{
+        margin-top:0px;
+    }
+    .product-five{
+        margin-top:0px;
+    }
+    .product-six{
+        margin-top:0px;
+    }
+}
+
+
+@media only screen and (max-width: 375px) {
+  
+    .product-one{
+        margin-top:-6rem;
+    }
+    .product-two{
+        margin-top:-6rem;
+    }
+    .product-three{
+        margin-top:-6rem;
+    }
+    .product-four{
+        margin-top:-6rem;
+    }
+    .product-five{
+        margin-top:-6rem;
+    }
+    .product-six{
+        margin-top:-6rem;
+      
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .product-one{
+        margin-top: -1.3rem;
+    }
+    .product-two{
+        margin-top: -1.3rem;
+    }
+    .product-three{
+        margin-top: -1.3rem;
+    }
+    .product-four{
+        margin-top: -1.3rem;
+    }
+    .product-five{
+        margin-top: -1.3rem;
+    }
+    .product-six{
+        margin-top: -1.3rem;
     }
 }
